--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,7 +7,7 @@
 body{
   text-align: center;
   font-family: helvetica;
-  width: 960px;
+  max-width: 1024px;
 }
 
 
@@ -36,6 +36,20 @@ h2{
   background-image: url("../images/moto.jpeg"
   );
   height: 25rem;
+  font-weight: bold;
+  text-align: left;
+}
+
+.inside-new {
+  background-color: black;
+  width: 20rem;
+  padding: 2rem 3rem;
+  position: relative;
+
+}
+.new-body {
+  font-size: 2rem;
+  padding-top: 0.25rem;
 }
 
 /*red-navigation div*/
