--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,7 +16,6 @@ body{
   background-color: black;
   font-size: 1rem;
   display: flex;
-  padding:
 }
 
 .logo {
@@ -35,9 +34,13 @@ h2{
 .new-arrival {
   background-image: url("../images/moto.jpeg"
   );
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   height: 25rem;
   font-weight: bold;
   text-align: left;
+
 }
 
 .inside-new {
@@ -45,11 +48,14 @@ h2{
   width: 20rem;
   padding: 2rem 3rem;
   position: relative;
+  top: 9rem;
+
 
 }
 .new-body {
   font-size: 2rem;
   padding-top: 0.25rem;
+
 }
 
 /*red-navigation div*/
