--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -66,7 +66,29 @@ h2{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
+
 /*all-three div*/
+.all-three {
+  display: flex;
+  justify-content: space-around;
+  padding: 3rem;
+}
+
+.three-box {
+  border: 4px solid black;
+  width: 30%;
+  overflow: hidden;
+}
+.three-img {
+  max-height: 9rem;
+  padding: 2rem;
+  width: auto;
+
+}
+
+.three-p {
+  background-color: black;
+}
 
 /*info div*/
 
