--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,7 @@
 body{
   text-align: center;
   font-family: helvetica;
-  width: 1250px;
+  width: 1600px;
 }
 
 .new-arrival, .header, .info, .all-three, .footer  {
@@ -71,16 +71,21 @@ h2{
   padding-bottom: 0.75rem;
 }
 
+.red-navigation-two{
+  display: none;
+}
+
 /*all-three div*/
 .all-three {
   display: flex;
-  justify-content: space-between;
   padding: 3rem;
 }
 
 .three-box {
   border: 4px solid black;
   width: 30%;
+  margin-right: 1.5em;
+  margin-left: 1.5rem;
   overflow: hidden;/
 }
 
@@ -95,6 +100,7 @@ h2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+
 
 /*info div*/
 .info {
@@ -131,6 +137,36 @@ h2{
 }
 
 /*queries*/
-@media only screen and (max-width: 1024px) and (orientation: portrait){
+@media only screen and /*(min-width: 471px)and*/ (max-width: 1024px) and (orientation: portrait){
+  body {
+    width: 100%;
+  }
 
+  .new-arrival, .header, .info, .all-three, .footer  {
+   padding-left: 0;
+   padding-right: 0;
+  }
+
+  .all-three {
+  }
+
+  .box-glass {
+    display: none;
+  }
+
+  .inside-red {
+
+  }
+
+  .three-box {
+    width: 47%;
+
+  }
+  .red-navigation{
+    display: none;
+  }
+  .red-navigation-two{
+    background-color: firebrick;
+    display: flex;
+    justify-content: space-around;
 }
