--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -50,7 +50,6 @@ h2{
   width: 20rem;
   padding: 2rem 3rem;
   position: relative;
-
   top: 9rem;
 }
 
@@ -137,7 +136,7 @@ h2{
 }
 
 /*queries*/
-@media only screen and /*(min-width: 471px)and*/ (max-width: 1024px) and (orientation: portrait){
+@media only screen and (min-width: 601px)and (max-width: 1024px) and (orientation: portrait){
   body {
     width: 100%;
   }
@@ -147,26 +146,111 @@ h2{
    padding-right: 0;
   }
 
-  .all-three {
-  }
-
   .box-glass {
     display: none;
   }
 
-  .inside-red {
-
-  }
-
   .three-box {
     width: 47%;
-
   }
-  .red-navigation{
+  .red-navigation {
     display: none;
   }
-  .red-navigation-two{
+  .red-navigation-two {
+    background-color: firebrick;
+    display: flex;
+    justify-content: space-around;}
+}
+
+@media only screen and  (max-width: 600px) and (orientation: portrait){
+  .new-arrival, .header, .info, .all-three, .footer  {
+   padding-left: 0%;
+   padding-right: 0%;
+  }
+
+  body {
+    width: 100%;
+  }
+
+  .new-arrival {
+    height: 15rem;
+  }
+
+  .inside-new-arrival {
+    width: 100%;
+    max-height: 5rem;
+  }
+
+  .inside-new {
+    width: auto;
+  }
+
+  .new-header {
+    font-size: 0.77rem;
+  }
+
+  .new-body{
+    font-size: 1rem;
+  }
+
+  .red-navigation {
+    display: none;
+  }
+
+  .red-navigation-two {
     background-color: firebrick;
     display: flex;
     justify-content: space-around;
+  }
+
+  .three-box {
+    width: 90%;
+  }
+
+  .box-glass, .box-watch {
+    display: none;
+  }
+
+  .info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .info-container {
+    width: 90%;
+  }
+
+  .data-color {
+    padding-bottom: 0.5rem;
+  }
+
+  .footer {
+    text-align: center;
+  }
 }
+
+/*
+.info {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 3rem;
+  padding-bottom: 4rem;
+}
+.info-container {
+  width: 35%;
+
+}
+.container-header {
+  border: 1px solid black;
+  background-color: black;
+  padding: 1rem 2rem;
+  text-align: left;
+
+}
+
+.data-color {
+  color: black;
+  text-align: left;
+}
+*/
