--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,7 @@
 body{
   text-align: center;
   font-family: helvetica;
-  width: 1600px;
+  width: 960px;
 }
 
 .new-arrival, .header, .info, .all-three, .footer  {
@@ -136,7 +136,7 @@ h2{
 }
 
 /*queries*/
-@media only screen and (min-width: 601px)and (max-width: 1024px) and (orientation: portrait){
+@media only screen and (min-width: 420px)and (max-width: 1024px) and (orientation: portrait){
   body {
     width: 100%;
   }
@@ -162,7 +162,7 @@ h2{
     justify-content: space-around;}
 }
 
-@media only screen and  (max-width: 600px) and (orientation: portrait){
+@media only screen and (min-width: 320px) and  (max-width: 420px) and (orientation: landscape){
   .new-arrival, .header, .info, .all-three, .footer  {
    padding-left: 0%;
    padding-right: 0%;
@@ -229,28 +229,3 @@ h2{
     text-align: center;
   }
 }
-
-/*
-.info {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 3rem;
-  padding-bottom: 4rem;
-}
-.info-container {
-  width: 35%;
-
-}
-.container-header {
-  border: 1px solid black;
-  background-color: black;
-  padding: 1rem 2rem;
-  text-align: left;
-
-}
-
-.data-color {
-  color: black;
-  text-align: left;
-}
-*/
